# SynLlama

./: .gitignore  README.md  main.py  pyproject.toml
assets/docs/: api_guide.md
synllama/: __init__.py  api.py
synllama/llm/: build_custom_indices.py  inference.py  reconstruction.py
