[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synllama"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.4.0",
    "black==25.1.0",
    "datasets==3.3.2",
    "einops==0.8.1",
    "flake8==7.1.2",
    "gitpython==3.1.44",
    "huggingface-hub==0.29.2",
    "isort==6.0.1",
    "matplotlib==3.10.1",
    "mypy==1.15.0",
    "omegaconf==2.3.0",
    "pre-commit==4.1.0",
    "pygments==2.19.1",
    "rdkit==2024.9.6",
    "reportlab==4.2.5",
    "rich==13.9.4",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "sqlalchemy==2.0.37",
    "statsmodels==0.14.4",
    "tokenizers==0.19.1",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.44.2",
    "types-pyyaml==6.0.12.20241230",
]

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
extra_standard_library = "typing_extensions,mypy,mypy_extensions"
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
expand-star-imports = true
ignore-init-module-imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["synllama*"]
exclude = ["tests*"]
